Time: 32 ms, Memory: 58.2 MB - LeetHub